--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ file(GLOB SOURCES "src/*.h" "src/*.cpp")
 set(SOURCE_DIR ${CMAKE_SOURCE_DIR})
 set(DEST_DIR ${CMAKE_BINARY_DIR})
 
-add_executable(${PROJECT_NAME} ${SOURCES})
+add_executable(qmt ${SOURCES})
