--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required (VERSION 3.10)
-project (q_mem_tools)
+project (qmt)
 
 file(GLOB SOURCES "src/*.h" "src/*.cpp")
 
 set(SOURCE_DIR ${CMAKE_SOURCE_DIR})
 set(DEST_DIR ${CMAKE_BINARY_DIR})
 
-add_executable(qmt ${SOURCES})
+add_executable(${PROJECT_NAME} ${SOURCES})
